# broken-pipeline-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/broken-pipeline/: Cargo.toml  README.md
crates/broken-pipeline-c/: Cargo.toml  README.md
crates/broken-pipeline-c/include/: broken_pipeline_c.h
crates/broken-pipeline-c/src/: lib.rs
crates/broken-pipeline-c/tests/c/: CMakeLists.txt  error_smoke.c  naive_smoke.c
crates/broken-pipeline-capi/: Cargo.toml
crates/broken-pipeline-capi/include/: broken_pipeline_rs.h
crates/broken-pipeline-capi/src/: lib.rs
crates/broken-pipeline-capi/tests/c/: CMakeLists.txt  error_smoke.c  naive_smoke.c
crates/broken-pipeline-core/: Cargo.toml  README.md
crates/broken-pipeline-core/src/: lib.rs
crates/broken-pipeline-core/tests/: arrow_traits_tests.rs  compile_tests.rs  pipe_exec_tests.rs  task_tests.rs
crates/broken-pipeline-core/tests/support/: mod.rs
crates/broken-pipeline-schedule/: Cargo.toml
crates/broken-pipeline-schedule/src/: async_dual_pool_scheduler.rs  lib.rs  naive_parallel_scheduler.rs  parallel_coro_scheduler.rs  sequential_coro_scheduler.rs  traits.rs
crates/broken-pipeline-schedule/src/detail/: callback_resumer.rs  conditional_awaiter.rs  coro_awaiter.rs  coro_resumer.rs  future_awaiter.rs  mod.rs  single_thread_awaiter.rs  single_thread_resumer.rs
crates/broken-pipeline-schedule/tests/: conditional_awaiter_tests.rs  coro_awaiter_tests.rs  future_awaiter_tests.rs  scheduler_tests.rs  single_thread_awaiter_tests.rs
crates/broken-pipeline/src/: compile.rs  operator.rs  pipeline.rs  pipeline_exec.rs  task.rs  types.rs
crates/broken-pipeline/src/traits/: arrow.rs
crates/broken-pipeline/tests/: arrow_traits_tests.rs  compile_tests.rs  pipe_exec_tests.rs  task_tests.rs
crates/broken-pipeline/tests/support/: mod.rs
scripts/: test-c-api.sh
